2003-03-04 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Removed unneeded SSL checks.
	
2003-02-28  Yuriy Syrota <rasta renome.rovno.ua>
	
	* configure.in: added 'uk' (Ukrainian) to ALL_LINGUAS

2003-02-27 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Changed the order of LID's commands.
	
2003-02-26 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp, src/endpoint.cpp, src/gatekeeper.cpp, 
	src/gdkvideoio.cpp, src/ils.cpp, src/lid.cpp, src/urlhandler.cpp,
	src/videograbber.cpp: Made sure that gconf calls are protected by
	the GDK Mutex.

2003-02-26 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Fixed crash with pwlib 1.4.8 on PPC.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/ils.h: Do not use class variables for the search
	as it prevents two searches to occur at the same time.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Added timeout for search.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: Fixed possible crash when registering.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: If the Last name is empty, then don't concatanate
	it to the first name because it adds an unneeded whitespace.

	* src/ils.cpp: Allow to register without a last name and put "-"
	instead of empty fields.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed the Auto Speakerphone mode.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Removed the Idle.
	
2003-02-24 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented version to 0.96.1. Fixed includes order.
	Fixed strcasecmp problem.

	* lib/xdap/xdap.h: Fixed strcasecmp problem.
	
	* src/endpoint.cpp: Misc Quicknet changes for automatic Speakerphone
	mode.

	* src/gnomemeeting.cpp: Same.

	* src/lid.cpp: Same.

	* src/urlhandler.cpp, src/urlhandler.h: AnswerCallNow is now called
	in the URL Handler if no callto is given.
	