@@ -1,4 +1,4 @@
-AC_INIT(gnomemeeting, 0.96.1, http://bugzilla.gnome.org/enter_bug.cgi?product=gnomemeeting)
+AC_INIT(gnomemeeting, 0.97.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gnomemeeting)
 AC_CANONICAL_TARGET
 AC_PREREQ(2.53)
 AC_CONFIG_SRCDIR(src/gnomemeeting.cpp)
@@ -24,9 +24,9 @@ dnl   Versioning
 dnl ###########################################################################
 
 MAJOR_VERSION=0
-MINOR_VERSION=96
+MINOR_VERSION=97
 BUILD_TYPE=ReleaseCode
-BUILD_NUMBER=1
+BUILD_NUMBER=0
 
 AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION,[fix])
 AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION,[fix])
@@ -247,6 +247,12 @@ CPPFLAGS="$CPPFLAGS_save"
 
 
 dnl ###########################################################################
+dnl --enable-firewire
+dnl ###########################################################################
+AC_ARG_ENABLE(firewire, [  --enable-firewire       Enable Firewire support.], enable_firewire="$enable_val", enable_firewire="no")
+
+
+dnl ###########################################################################
 dnl   Check for SDL
 dnl ###########################################################################
 
@@ -358,6 +364,22 @@ if test -e "/usr/include/netinet6/in6.h" -a "${gm_platform}" != "linux"; then
 fi
 
 
+dnl #########################################################################
+dnl  Check for FIREWIRE if available.
+dnl ########################################################################
+HAS_FIREWIRE="disabled"
+firewire="no"
+
+AC_ARG_ENABLE(firewire, [  --enable-firewire     enable Firewire support], firewire="yes")
+if test -e "/usr/include/libdc1394/dc1394_control.h" -a "${firewire}" != "no"; then
+   HAS_FIREWIRE="enabled"
+   H323_CFLAGS="$H323_CFLAGS -DTRY_1394DC -DTRY_1394AVC"
+else
+AC_MSG_ERROR([***Firewire headers not found.])
+fi
+
+
+
 GNOMEMEETING_INCLUDES="$PTLIB_CFLAGS $LDAP_INCLUDES $OPENH323_CFLAGS $H323_CFLAGS $GNOMEMEETING_CFLAGS $SDL_CFLAGS $ARTSC_CFLAGS"
 GNOMEMEETING_LDADD="$PTLIB_LDFLAGS $OPENH323_LDFLAGS $GNOMEMEETING_LIBS $LDAP_LIBS $SDL_LDFLAGS $ARTSC_LDFLAGS $H323_LIBS"
 CFLAGS=""
@@ -441,6 +463,7 @@ echo "           Speex GPL audio codec  :  $HAS_SPEEX"
 echo "  GNOME Features (Bonobo, Druid," 
 echo "   Session, Incoming Call Sound)  :  $HAS_GNOME"
 echo "     IPv6 Support (EXPERIMENTAL)  :  $HAS_IPV6"
+echo "                Firewire support  :  $HAS_FIREWIRE"
 echo ""
 echo "                         OS Type  :  $target_os"
 echo "                    Machine Type  :  $target_cpu"
