@@ -1,5 +1,11 @@
 2003-03-04 Damien Sandras  <dsandras@seconix.com>
 
+	* src/main_window.cpp, src/pref_window.cpp, src/videograbber.cpp,
+	configure.in: Added patch for Firewire support thanks to
+	Georgi Georgiev <chutz@gg3.net>
+	
+2003-03-04 Damien Sandras  <dsandras@seconix.com>
+
 	* configure.in: Removed unneeded SSL checks.
 	
 2003-02-28  Yuriy Syrota <rasta renome.rovno.ua>
